prevent layout shift in count up + show up properly in editor

--- a/src/block/count-up/editor.scss
+++ b/src/block/count-up/editor.scss
@@ -1,3 +1,3 @@
 [data-type="stackable/count-up"] .stk-block-count-up__text {
-	visibility: visible;
+	opacity: 1;
 }
